--- a/BlazorTrainingAprilServer/Pages/Counter.razor
+++ b/BlazorTrainingAprilServer/Pages/Counter.razor
@@ -2,9 +2,12 @@
 
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<p>Current count: @currentCount+1</p>
+<br >
+<p>
+<button class="btn btn-primary"
+  
+        @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
