Entity Framework Model

--- a/BlazorTrainingAprilServer/Pages/Demo2.razor
+++ b/BlazorTrainingAprilServer/Pages/Demo2.razor
@@ -1,5 +1,5 @@
 ﻿@page "/d2"
-@*@attribute [Authorize]*@
+@attribute [Authorize]
 <h3>Demo2</h3>
 <AuthorizeView>
     <Authorized>
@@ -10,5 +10,6 @@
     </NotAuthorized>
 </AuthorizeView>
 @code {
+    
 
 }
