Todo SQL Server Card Layout

--- a/BlazorTrainingAprilServer/Pages/Modul04/DBTodo.razor
+++ b/BlazorTrainingAprilServer/Pages/Modul04/DBTodo.razor
@@ -3,22 +3,24 @@
 <h3>DBTodo</h3>
 <div class="row">
     <div class="col">
-        <div class="card-deck">
+        <div class="row">
             @foreach (var item in vm.AufgabenListe)
             {
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">@item.Erledigt</h5>
+                <div class="col mb-4">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">@item.Erledigt</h5>
 
-                        <p class="card-text">@item.Text</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                            <p class="card-text">@item.Text</p>
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
                     </div>
-                </div>
-            }
+                    </div>
+                    }
 
+                </div>
             </div>
-        </div>
     </div>
 
 @code {
