--- a/BlazorTrainingAprilServer/Pages/Modul04/DbToDo2.razor
+++ b/BlazorTrainingAprilServer/Pages/Modul04/DbToDo2.razor
@@ -1,6 +1,7 @@
 ﻿@page "/dbtodo2"
-
-<h3>DBTodo</h3>
+@using BlazorTrainingAprilServer.models
+@inject TodoDBContext db
+@*<h3>DBTodo</h3>
 <div class="row">
     <div class="col">
         <div class="row">
@@ -25,7 +26,7 @@
 
 @code {
 
-    public AufgabenVM vm { get; set; } = new AufgabenVM();
-}
+    public AufgabenVM vm { get; set; } = new AufgabenVM(db);
+}*@
 
 
