--- a/BlazorTrainingAprilServer/Pages/Modul04/DbToDo2.razor
+++ b/BlazorTrainingAprilServer/Pages/Modul04/DbToDo2.razor
@@ -1,7 +1,7 @@
 ﻿@page "/dbtodo2"
 @using BlazorTrainingAprilServer.models
 @inject TodoDBContext db
-@*<h3>DBTodo</h3>
+<h3>DBTodo</h3>
 <div class="row">
     <div class="col">
         <div class="row">
@@ -26,7 +26,7 @@
 
 @code {
 
-    public AufgabenVM vm { get; set; } = new AufgabenVM(db);
-}*@
+    //public AufgabenVM vm { get; set; } = new AufgabenVM();
+}
 
 
