--- a/BlazorTrainingAprilServer/Pages/Modul04/DbToDo2.razor
+++ b/BlazorTrainingAprilServer/Pages/Modul04/DbToDo2.razor
@@ -26,7 +26,7 @@
 
 @code {
 
-    //public AufgabenVM vm { get; set; } = new AufgabenVM();
+    public AufgabenVM vm { get; set; }// = new AufgabenVM();
 }
 
 
